--- a/05.인공지능/10.감성분석.ipynb
+++ b/05.인공지능/10.감성분석.ipynb
@@ -2792,11 +2792,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "0cc396d4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def createModel():\n",
+    "    #학습데이터 생성\n",
+    "    import pandas as pd\n",
+    "    df_train = pd.read_csv('data/감성분석/train.csv')\n",
+    "    df_train = df_train[:1000]\n",
+    "\n",
+    "    #한글 형태소 분리함수\n",
+    "    from konlpy.tag import Okt\n",
+    "    okt = Okt()\n",
+    "    def okt_tokenizer(text):\n",
+    "        tokens = okt.morphs(text)\n",
+    "        return tokens\n",
+    "\n",
+    "    #document 벡터화\n",
+    "    df_train['document']\n",
+    "    from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "    vector = TfidfVectorizer(tokenizer=okt_tokenizer, ngram_range=(1,2), \n",
+    "                            min_df=3, max_df=0.9, token_pattern=None)\n",
+    "    vector.fit(df_train['document'])\n",
+    "    vector_trans = vector.transform(df_train['document'])\n",
+    "\n",
+    "    #모델생성 후 모델 학습\n",
+    "    from sklearn.linear_model import LogisticRegression\n",
+    "    model = LogisticRegression(C=10, max_iter=100)\n",
+    "    model.fit(vector_trans, df_train['label'])\n",
+    "\n",
+    "    return vector, model"
+   ]
   },
   {
    "cell_type": "code",
@@ -2804,15 +2832,33 @@
    "id": "0a9d9891",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "vector, model = createModel()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "d1caae39",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "text = '인공지능(AI) 3D 카메라 솔루션 전문 기업 딥인사이트(대표 오은송)는 오는 10월 13일부터 17일까지 아랍에미리트 두바이에서 열리는 중동 최대 ICT 전시회'\n",
+    "find_text = re.findall(r'[가-힣]+',text)\n",
+    "text_join = [' '.join(find_text)]\n",
+    "vector_text = vector.transform(text_join)\n",
+    "pred = model.predict(vector_text)\n",
+    "print(pred)\n"
+   ]
   },
   {
    "cell_type": "code",
